<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@+id/ll_paint_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image" />

        <com.zulfanahmadi.kidsdrawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF"
            />

    </FrameLayout>



    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_tools"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_drawing_view_container"
        >

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/skin"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/green"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/blue"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/yellow"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/cyan"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/cyan"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/random"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:contentDescription="@string/color"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_paint_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:contentDescription="@string/brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/ib_undo"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:contentDescription="@string/brush"
            android:scaleType="fitXY"
            android:src="@drawable/undo"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/ib_color_wheel"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:contentDescription="@string/color_palette"
            android:onClick="openColorPickerDialogue"
            android:scaleType="fitXY"
            android:src="@drawable/colour"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="@string/galleri"
            android:onClick="openColorPickerDialogue"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/ib_save"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="@string/save"
            android:onClick="openColorPickerDialogue"
            android:scaleType="fitXY"
            android:src="@drawable/ic_save" />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>